objects/PS_OLH__Chat__c.object
<CustomObject>
    <description>Holds all information and references of a Oracle Live Help Chat session.</description>
    <fields>
        <fullName>OdasevaArchivedCaseId__c</fullName>
        <description>This field is used by Odaseva archiving solution in order to store the case id of archived cases. Required in 18-char format</description>
        <externalId>true</externalId>
        <label>OdasevaArchivedCaseId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OdasevaArchivedCaseNumber__c</fullName>
        <label>OdasevaArchivedCaseNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OdasevaArchivedCaseURL__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(OdasevaArchivedCaseId__c)),NOT(ISBLANK(OdasevaArchivedCaseNumber__c))),HYPERLINK($Label.OdasevaArchivedCaseUrlPrefix &amp; OdasevaArchivedCaseId__c, OdasevaArchivedCaseNumber__c),&quot;No archived case to display&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Odaseva Archived Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OLH Chats</relationshipLabel>
        <relationshipName>OLH_Chats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PS_OLH__CSR_First_Name__c</fullName>
        <label>CSR First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__CSR_Last_Name__c</fullName>
        <label>CSR Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__CSR_User_Name__c</fullName>
        <label>CSR User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>OLH Chats</relationshipLabel>
        <relationshipName>OLH_Chats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>OLH Chats</relationshipLabel>
        <relationshipName>OLH_Chats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Category_Name__c</fullName>
        <label>Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Chat_End__c</fullName>
        <label>Chat End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Chat_Start__c</fullName>
        <label>Chat Start</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OLH Chats</relationshipLabel>
        <relationshipName>OLH_Chats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Department_Name__c</fullName>
        <label>Department Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PS_OLH__First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Incident_Number__c</fullName>
        <label>Incident Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>OLH Chats</relationshipLabel>
        <relationshipName>OLH_Chats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>OLH Chats</relationshipLabel>
        <relationshipName>OLH_Chats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Optional_Data_10__c</fullName>
        <label>Optional Data 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Optional_Data_11__c</fullName>
        <label>Optional Data 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Optional_Data_12__c</fullName>
        <label>Optional Data 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Optional_Data__c</fullName>
        <label>Optional Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Remote_IP__c</fullName>
        <label>Remote IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Transcript__c</fullName>
        <label>Transcript</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>OLH Chat</label>
    <listViews>
        <fullName>PS_OLH__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Chat ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OLH Chats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>